--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -38,6 +38,7 @@ by Darren Oh: Fixed more error notices.
 by Darren Oh: Added translation template.
 by Darren Oh: Fixed typo in changelog.
 by Darren Oh: Moved theme functions file to theme directory.
+by Darren Oh: Changed install file description.
 
 
 Viewfield 5.x-1.x, 2007-02-05
