#373373 by ramsalt: Fixed page view changing node title.

--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -40,6 +40,7 @@ by Darren Oh: Fixed typo in changelog.
 by Darren Oh: Moved theme functions file to theme directory.
 by Darren Oh: Changed install file description.
 by Darren Oh: Fixed update to enable fields.
+#373373 by ramsalt: Fixed page view changing node title.
 
 
 Viewfield 5.x-1.x, 2007-02-05
