#509406 by sun, askibinski, KarenS: Fixed views field select options.

--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -6,6 +6,7 @@ Viewfield x.x-x.x, xxxx-xx-xx
 
 Viewfield 6.x-1.x, xxxx-xx-xx
 -----------------------------
+#509406 by sun, askibinski, KarenS: Fixed views field select options.
 #118764 by alex_b: Fixed typo in translating arguments.
 #100085 by Eaton: Implemented plugins as formatters.
 #235572 by plach. Updated to Drupal 6.
