--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -6,6 +6,7 @@ Viewfield x.x-x.x, xxxx-xx-xx
 
 Viewfield 6.x-1.x, xxxx-xx-xx
 -----------------------------
+by sun: Fixed character encoding and line endings of all files.
 #509406 by sun, askibinski, KarenS: Fixed views field select options.
 #118764 by alex_b: Fixed typo in translating arguments.
 #100085 by Eaton: Implemented plugins as formatters.
