--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -6,6 +6,7 @@ Viewfield x.x-x.x, xxxx-xx-xx
 
 Viewfield 6.x-1.x, xxxx-xx-xx
 -----------------------------
+#477244 by muhleder, japanitrat, sun: Fixed empty view result output.
 
 
 Viewfield 6.x-1.0, 2010-08-24
