Issue #416922 by sun: Fixed changelog entry and coding conventions.

--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -4,15 +4,15 @@ Viewfield x.x-x.x, xxxx-xx-xx
 
 Viewfield 6.x-1.x, xxxx-xx-xx
 -----------------------------
+#416922 by frjo, keithm: Fixed vname too short.
+#1052370 by Anclywen: Fixed unrestricted list of allowed views.
+#1120884 by keithm: Fixed viewfield creation notices.
 #647746 by sun: Fixed %author id of node not always passed to view.
 #571128 by sun: Fixed field setting labels and descriptions (UX).
 #535494 by sun, chaps2: Fixed view is processed twice for tokens.
 #831574 by sun: Fixed array_filter PHP warning.
 #510356 by etzel, sun: Fixed exposed filters submitting to front page.
 #477244 by muhleder, japanitrat, sun: Fixed empty view result output.
-Issue #1120884 by keithm: Fixed viewfield creation notices.
-Issue #1052370 by Anclywen: Fix unrestricted list of allowed views.
-Issue #416922 by frjo, keithm: Fixed vname too short.
 
 Viewfield 6.x-1.0, 2010-08-24
 -----------------------------
