--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -1,8 +1,11 @@
 Viewfield x.x-x.x, xxxx-xx-xx
 -----------------------------
 
-
 Viewfield 6.x-1.x, xxxx-xx-xx
+-----------------------------
+
+
+Viewfield 6.x-1.1, 2011-04-27 
 -----------------------------
 #416922 by keithm: Fixed update_6001 to check current size < 128 before update.
 #416922 by frjo, keithm: Fixed vname too short.
