--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -3,6 +3,7 @@ Viewfield x.x-x.x, xxxx-xx-xx
 
 Viewfield 6.x-1.x, xxxx-xx-xx
 -----------------------------
+#1147558 by dwightaspinwall, sun: Fixed updates with empty contents.
 #1141200 by wojtha, keithm: Fixed column vname to allow NULL.
 
 Viewfield 6.x-1.1, 2011-04-27
