Issue #311587 by keithm: Fixed force default handling.

--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -1,6 +1,7 @@
 
 Viewfield 7.x-2.x, xxxx-xx-xx
 -----------------------------
+#311587 by keithm: Fixed force default handling.
 #1048516 by GoZ, keithm: Fixed select list to test for deleted view.
 by sun: Fixed documentation, added test file.
 #1140810 by sun, keithm: Fixed entity handling and changed stack structure.
