--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -3,6 +3,7 @@ Viewfield x.x-x.x, xxxx-xx-xx
 
 Viewfield 6.x-2.x, xxxx-xx-xx
 -----------------------------
+by keithm: Rolled back #903034 because it breaks views headers/footers.
 #903034 by keithm: Fixed bug producing output for empty view.
 #1048516 by GoZ, keithm: Fixed select list to test for deleted view.
 #1149592 by keithm: Fixed update_6004() to remove update_sql() call.
