--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -1,6 +1,7 @@
 
 Viewfield 7.x-2.x, xxxx-xx-xx
 -----------------------------
+#1209804 by sun, keithm: Changed force_default from widget to instance settings.
 #311587 by sun, keithm: Fixed force default handling again.
 #311587 by keithm: Fixed force default handling.
 #1048516 by GoZ, keithm: Fixed select list to test for deleted view.
