--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -1,6 +1,7 @@
 
 Viewfield 7.x-2.x, xxxx-xx-xx
 -----------------------------
+#1207552 by sun, keithm: Changed to use instance defaults with force_default.
 #1209804 by sun, keithm: Changed force_default from widget to instance settings.
 #311587 by sun, keithm: Fixed force default handling again.
 #311587 by keithm: Fixed force default handling.
