--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -1,6 +1,7 @@
 
 Viewfield 7.x-2.x, xxxx-xx-xx
 -----------------------------
+#1071212 by sun, keithm, imclean: Fixed viewfield rendering and theming support.
 #1216684 by sun: Merged include files into .module.
 #1230364 by sun, keithm: Fixed view select in field widget is removed when there
   is only one option.
