--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -3,6 +3,7 @@ Viewfield x.x-x.x, xxxx-xx-xx
 
 Viewfield 6.x-2.x, xxxx-xx-xx
 -----------------------------
+#1329428 by keithm: Changed for new token_replace() initial string argument.
 #1216684 by keithm, sun: Changed to merge include files into .module.
 #1181226 by sun, keithm: Changed to remove viewfield_views_query_alter().
 #535494 by keithm: Fixed stack discipline to avoid rendering same view twice.
